--- a/public/views/viewvideo.ejs
+++ b/public/views/viewvideo.ejs
@@ -7,15 +7,16 @@
 </head>
 <body>
    
- <div class="container user"> HI <%=username%></div>
+ <div class="container user"> HI <span id="user"><%=username%></span></div>
 
     <div class ="container">
   <video id="vPlayer" controls width="600px">
-    <source src="<%=video_link%>" type="video/mp4">
+    <source id="source" src="<%=video_link%>" type="video/mp4">
   </video>
 </body>
 </div>
 
 <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
 <script type='text/javascript' src='../js/video_util.js'></script>
+
 </html>
