--- a/public/views/login.ejs
+++ b/public/views/login.ejs
@@ -14,7 +14,7 @@
             <hr>
         
             <label for="username"><b>Username</b></label>
-            <input type="text" placeholder="Enter Email" name="username" required>
+            <input type="text" placeholder="Enter Username" name="username" required>
         
             <label for="psw"><b>Password</b></label>
             <input type="password" placeholder="Enter Password" name="password" required>
