--- a/public/views/viewvideo.ejs
+++ b/public/views/viewvideo.ejs
@@ -13,8 +13,13 @@
   <video id="vPlayer" controls width="600px">
     <source id="source" src="<%=video_link%>" type="video/mp4">
   </video>
+  <br>
+  <div>
+  <button id="like">Like</button>
+  <span><%=likes%> Likes</span>
+  </div>
+  </div>
 </body>
-</div>
 
 <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
 <script type='text/javascript' src='../js/video_util.js'></script>
